--- a/server/templates/workerTemplate.tmpl
+++ b/server/templates/workerTemplate.tmpl
@@ -1,9 +1,8 @@
-
 *****************************************************************
 Worker: {{.WorkerId}} 
 Employer: {{.Employer}}
 *****************************************************************
 Worker Internal Id:   {{.InternalId}}
 Person Id: {{.PersonId}}
-Pay: {{.Pay}
+Pay: {{.Pay}}
 Employment Status: {{.EmploymentStatus}}
